--- a/version-1.html
+++ b/version-1.html
@@ -52,6 +52,10 @@
         background-color: rgba(0, 0, 0, 0.712);
     }
 
+    .buttons .btn {
+        width: 15%;
+    }
+
     .buttons span {
         font-weight: 700;
 
@@ -92,11 +96,18 @@
     .section-ukraine {
         background-color: #f2f1ec;
     }
+
+    .text-ukraine img {
+        width: 30px;
+        margin-right: 10px;
+    }
+
     .text-ukraine {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        text-align: center;
     }
     .myCard button {
         width: 40px;
@@ -239,7 +250,7 @@
                     <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/22/47/53/f7/caption.jpg?w=800&h=-1&s=1" alt="">
                 </div>
                 <div class="text-ukraine" style="width: 40%;">
-                    <p>Tripadvisor Foundation</p>
+                    <p><img src="./img/favicon-ico.ico" alt="" width="40px">Tripadvisor Foundation</p>
                     <h3>Help Ukrainian families in need</h3>
                     <p>The Tripadvisor Foundation is supporting the World Central Kitchen to feed hundreds of thousands of displaced Ukrainians. Donate today, and we'll match your donation.</p>
                     <a href="#" class="btn-joinus text-decoration-none">Join us</a>
