--- a/version-1.html
+++ b/version-1.html
@@ -52,7 +52,7 @@
         background-color: rgba(0, 0, 0, 0.712);
     }
 
-    .buttons .btn {
+    .btn-icons .btn {
         width: 15%;
     }
 
@@ -79,9 +79,9 @@
     .text {
         position: absolute;
         background-color: #fff;
-        width: 80%;
-        height: 50px;
-        border-radius: 25px;
+        width: 70%;
+        height: 55px;
+        border-radius: 30px;
         box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.527);
         font-size: 1.2rem;
         display: flex;
@@ -169,7 +169,7 @@
             </div>
         </div>
     </nav>
-    <div class="container mt-3">
+    <div class="btn-icons container mt-3">
         <div class="row buttons d-flex justify-content-between">
             <div type="button" class="btn btn-outline-dark d-flex align-items-center justify-content-between">
                 <span>Hotels</span>
