--- a/Tripadvisor.html
+++ b/Tripadvisor.html
@@ -71,7 +71,9 @@
     }
 
     .mainsec .img-wrap {
+        width: 100%;
         background-color: rgb(219, 255, 243);
+        overflow: hidden;
     }
 
     img {
