--- a/Tripadvisor.html
+++ b/Tripadvisor.html
@@ -94,15 +94,20 @@
         width: 70%;
         height: 55px;
         border-radius: 30px;
-        box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.527);
+        border: 1px solid transparent;
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.527);
         font-size: 1.2rem;
         display: flex;
         align-items: center;
+        color: rgb(161, 161, 161);
+        padding: 0 20px;
 
     }
 
-    .text span {
-        color: rgb(161, 161, 161);
+    .text input {
+        border: 1px solid transparent;
+        outline-style: none;
+        margin-left: 15px;
     }
 
     .section-ukraine {
@@ -607,10 +612,11 @@
                     <img src="https://static.tacdn.com/img2/brand/home/homefeb2022_dt@2x.webp" alt="">
                 </div>
                 <div class="text">
-                    <i class="fa-solid fa-magnifying-glass ml-4 mr-3"></i>
-                    <span>Where to?</span>
+                    <div>
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                    </div>
+                    <input type="text" placeholder="Where to?">
                 </div>
-
             </div>
         </div>
     </div>
