--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </div>
             <div type="button" class="btn btn-outline-dark d-flex align-items-center justify-content-between">
                 <span>Vacation Rentals</span>
-                <svg viewBox="0 0 24 24" width="20px" height="20px" class="bDFSd d Vb ymbyq">
+                <svg viewBox="0 0 24 24" width="20px" height="20px">
                     <path
                         d="M12.001 2L2.097 8.6V22h19.807V8.6L12.001 2zm7.922 18.021H4.077V9.66l7.924-5.28 7.922 5.28v10.361z">
                     </path>
